feat: multi-device dashboard with status tracking
- Redesign dashboard with device cards showing status and game sessions
- Extract dashboard JS/CSS to separate static files
- Add device status broadcasts in bridge (online/offline/serial_error)
- Extract types and utils modules in agent and cloud packages
- Simplify logging to Rich console, remove JSON config

--- a/cloud/pyproject.toml
+++ b/cloud/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.12"
 dependencies = [
   "fastapi>=0.124.0",
   "paho-mqtt>=2.1.0",
+  "pydantic>=2.10.0",
   "python-dotenv>=1.2.1",
   "python-multipart>=0.0.20",
   "uvicorn>=0.38.0",
