--- a/dashboard/pyproject.toml
+++ b/dashboard/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "cloud"
+name = "dashboard"
 version = "0.1.0"
 description = "MQTT backend + dashboard for Whacamole game"
 readme = "README.md"
@@ -16,7 +16,7 @@ dependencies = [
 ]
 
 [project.scripts]
-cloud = "cloud.__main__:main"
+dashboard = "dashboard.__main__:main"
 
 [build-system]
 requires = ["uv_build>=0.8.11,<0.9.0"]
